# floss

./: .flake8  .pre-commit-config.yaml  BUG_DOCUMENTATION_STATUS.md  BUG_DOCUMENTATION_TEMPLATE.md  DOCUMENTATION_UPDATE_SUMMARY.md  FL_USAGE.md  LICENSE  Makefile  PROJECT_ANALYSIS_SUMMARY.md  README.md  TEST_SUMMARY.md  UI_ENHANCEMENTS.md  UI_USAGE.md  check_quality.py  dev.ps1  dev_setup.txt  fix_formatting.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  examples.yml  quality.yml  release.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_GUIDE.md  EXAMPLES.md  EXAMPLE_CONTRIBUTION_GUIDE.md  INSTALLATION.md  README.md  TECHNICAL_SPECIFICATION.md  USAGE.md  USER_GUIDE.md  pyfault_arch.drawio
evaluation/: EFFECTIVENESS_REPORT.md  analyze_effectiveness.py  analyze_formula_discrimination.py  visualize_effectiveness.py  visualize_formula_effectiveness.py
evaluation/results/: formula_discrimination_analysis.json  pyfault_effectiveness_analysis.json
examples/: README.md  basic_example.py
examples/black/: run_test.sh  setup.sh
examples/black/bug19/: report.json
examples/black/bug20/: report.json
examples/black/bug22/: report.json
examples/black/bug23/: report.json
examples/black/multi-bugs/: run_test.sh  setup.sh
examples/black/multi-bugs/bugs_17-18-19-20/: README.md  report.json
examples/black/multi-bugs/bugs_19-22-23/: README.md  report.json
examples/comparison_output/: barinel_ranking.html  coverage_matrix.csv  dstar2_ranking.html  index.html  jaccard_ranking.html  kulczynski2_ranking.html  ranking_barinel.csv  ranking_dstar2.csv  ranking_jaccard.csv  ranking_kulczynski2.csv  ranking_tarantula.csv  summary.csv  test_results.csv
examples/cookiecutter/: README.md  pyfault.conf  run_test.sh  setup.sh
examples/cookiecutter/bug1/: report.json
examples/cookiecutter/bug2/: report.json
examples/dummy-example/: README.md  coverage.json  report.json
examples/dummy-example/tests/: test_equilateral.py
examples/ex1/: .coveragerc  coverage.json  pyfault.conf  report.json
examples/ex1/pyfault_output/: coverage_matrix.csv  dstar2_ranking.html  index.html  jaccard_ranking.html  kulczynski2_ranking.html  ochiai_ranking.html  package_overview.html  ranking_tarantula.csv  script.js  summary.csv  summary.json  tarantula_ranking.html  test_results.csv
examples/ex1/res/: coverage_matrix.csv  dstar2_ranking.html  index.html  jaccard_ranking.html  kulczynski2_ranking.html  ochiai_ranking.html  package_overview.html  ranking_dstar2.csv  ranking_jaccard.csv  ranking_kulczynski2.csv  ranking_ochiai.csv  ranking_tarantula.csv  script.js  style.css  summary.csv  summary.json  tarantula_ranking.html  test_results.csv
examples/ex1/res/source/: equilateral.html  isosceles.html
examples/ex1/tests/: test_isosceles.py
examples/example_output/: coverage_matrix.csv  index.html  ochiai_ranking.html  ranking_ochiai.csv  script.js  style.css  summary.csv  tarantula_ranking.html
examples/fastapi/: README.md  run_test.sh  setup.sh
examples/fastapi/bug11/: README.md  report.json  setup.sh
examples/fastapi/bug12/: report.json
examples/fastapi/bug13/: report.json
examples/fastapi/bug14/: report.json
examples/fastapi/bug15/: report.json
examples/fastapi/bug16/: report.json
examples/fastapi/bug2/: README.md  pyfault.conf  setup.sh
examples/fastapi/bug3/: README.md  setup.sh
examples/fastapi/bug6/: README.md  pyfault.conf  setup.sh
examples/fastapi/multi-bugs/: README.md  report.json  run_test.sh  setup.sh
examples/fastapi/multi-bugs/multi-bugs/: report.json
examples/pygraphistry/: README.md  bug_patch.txt  pyfault.conf  report.json  setup.sh
examples/ui_test_data/: sample_coverage.csv  sample_results.json
floss/: __init__.py
pyfault/: __init__.py
pyfault/core/cli/: __init__.py  main.py
pyfault/core/fl/: __init__.py  config.py  data.py  engine.py
pyfault/core/formulas/: __init__.py  base.py  sbfl_formulas.py
pyfault/core/test/: __init__.py  config.py  runner.py
pyfault/ui/: dashboard.py
pyfault_output/: coverage_matrix.csv  dstar2_ranking.html  index.html  jaccard_ranking.html  kulczynski2_ranking.html  ochiai_ranking.html  package_overview.html  ranking_dstar2.csv  ranking_jaccard.csv  ranking_kulczynski2.csv  ranking_ochiai.csv  ranking_tarantula.csv  script.js  summary.csv  summary.json  tarantula_ranking.html  test_results.csv
pyfault_output/source/: file1.html  file2.html
src/pyfault/: __init__.py
src/pyfault.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/pyfault/cli/: main.py
src/pyfault/core/: __init__.py  fault_localizer.py  models.py
src/pyfault/coverage/: __init__.py  collector.py
src/pyfault/fl/: config.py  data.py  engine.py
src/pyfault/formulas/: __init__.py  sbfl_formulas.py
src/pyfault/reporters/: __init__.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/pyfault/reporters/static/: d3.v7.min.js
src/pyfault/reporters/templates/: formula_report.html  main_report.html  package_overview.html  source_file.html
src/pyfault/test/: __init__.py  runner.py
src/pyfault/test_runner/: __init__.py  pytest_runner.py
src/pyfault/ui/: __init__.py  dashboard.py
tests/: test_cli.py  test_core.py  test_coverage_collector.py  test_e2e.py  test_fl.py  test_fl_cli.py  test_fl_edge_cases.py  test_formulas.py  test_integration.py  test_report_metadata.py  test_reporters.py  test_run_help.py  test_run_integration.py  test_run_performance.py  test_runner_metadata.py  test_safety_helpers.py  test_test_module.py  test_test_runner.py  test_ui_cli.py
