[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfault"
version = "0.1.0"
description = "A Python framework for Spectrum-Based Fault Localization (SBFL)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyFault Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=14.0.1",
    "click>=8.1.8",
    "pytest>=8.3.5",
    "numpy>=1.24.4",
    "coverage>=7.6.1",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "flake8",
    "pre-commit",
]
ui = [
    "streamlit>=1.45.0; python_version >= \"3.9\"",
    "plotly>=5.22.0; python_version >= \"3.9\"",
    "pandas>=2.0.3; python_version >= \"3.9\"",
]

[project.scripts]
pyfault = "pyfault.core.cli.main:main"

[project.urls]
Homepage = "https://github.com/example/pyfault"
Repository = "https://github.com/example/pyfault"
Issues = "https://github.com/example/pyfault/issues"

[tool.setuptools.packages.find]
where = [""]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true