[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfault"
description = "A Python framework for Spectrum-Based Fault Localization (SBFL)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alessandro Repola"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Debuggers",
]
requires-python = ">=3.8"
dependencies = [
    "rich>=14.0.1",
    "click>=8.1.8",
    "pytest>=8.3.5",
    "numpy>=1.24.4",
    "coverage>=7.6.1",
    "pytest-cov>=4.0.0",
]

dynamic = ["version"]

[project.optional-dependencies]
ui = [
    "streamlit>=1.45.0; python_version >= \"3.9\"",
    "plotly>=5.22.0; python_version >= \"3.9\"",
    "pandas>=2.0.3; python_version >= \"3.9\"",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pyfault = "pyfault.core.cli.main:main"

[project.urls]
Repository = "https://github.com/alessandrorepola/pyfault"
Issues = "https://github.com/alessandrorepola/pyfault/issues"

[tool.setuptools.packages.find]
where = [""]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
  )/
)
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    ".venv",
    ".tox",
    ".mypy_cache"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
    "build/",
    "dist/",
    "__pycache__/",
    ".venv/",
    ".tox/"
]

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "coverage.*",
    "streamlit.*",
    "plotly.*",
    "pandas.*"
]
ignore_missing_imports = true